updating pg conf

--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -1,7 +1,7 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   medialog        medialog                                md5
+local   all             medialog                                md5
 local   all             all                                     peer
 
 # IPv4 local connections:
