--- a/medialog.service
+++ b/medialog.service
@@ -8,7 +8,7 @@ Type=simple
 User=vagrant
 Group=vagrant
 WorkingDirectory=/vagrant/medialog
-ExecStart=/usr/bin/bash -lc 'bundle exec rails server -e production --bind 127.0.0.1 --port 3000'
+ExecStart=/usr/bin/bash -lc 'bundle exec puma -p 3000'
 TimeoutSec=30
 RestartSec=15s
 Restart=always
