updating medialog service to run in production mode

--- a/medialog.conf
+++ b/medialog.conf
@@ -2,6 +2,8 @@ server {
   listen 80 default_server;
   client_max_body_size 256M;
   server_name _;
+  root /var/www/medialog
+
   location / {
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -10,5 +12,13 @@ server {
     proxy_read_timeout 172800s;
     proxy_pass http://localhost:3000;
     proxy_http_version 1.1;
+  }
+
+  location ~ ^/(public)/ {
+    gzip_static on;
+    expires max;
+    add_header Cache-Control public;
+    try_files $uri =404;
+    error_page 404 /404.html;
   }
 }
