typo in medialog.conf

--- a/medialog.conf
+++ b/medialog.conf
@@ -2,7 +2,7 @@ server {
   listen 80 default_server;
   client_max_body_size 256M;
   server_name _;
-  root /var/www/medialog
+  root /var/www/medialog;
 
   location / {
     proxy_set_header Host $http_host;
